# LONGINVEST

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md
backend/: alembic.ini  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260714_0001_create_audit_event.py  20260714_0002_separate_application_role.py  20260714_0003_protect_migration_version.py  20260714_0004_jobs_outbox.py  20260715_0005_auth_foundation.py  20260715_0006_notification_foundation.py  20260715_0007_stage2_market_foundations.py  20260715_0008_market_data_collection.py  20260716_0009_qfq_refresh.py  20260716_0010_monitoring_foundations.py  20260717_0011_targets_signals.py  20260721_0012_strategy_backtest.py  20260722_0013_corporate_actions.py  20260722_0014_backtest_controls.py  20260722_0015_dynamic_settings.py  20260722_0016_system_alerts.py  20260722_0017_outbox_stream_sequence.py  20260722_0018_long_running_bulk_jobs.py  20260722_0019_notification_policy_runtime.py  20260722_0020_scheduler_runtime_state.py  20260722_0021_system_schedule_occurrences.py  20260723_0022_strategy_draft_facts.py  20260723_0023_normalize_provider_codes.py
backend/src/long_invest/: __init__.py
backend/tests/bootstrap/: test_backtest_jobs.py  test_bulk_backtest_worker.py  test_dashboard.py  test_stage4_runtime.py  test_strategy_data.py  test_strategy_operations.py  test_strategy_validation.py
backend/tests/integration/: test_auth_persistence.py  test_backtest_control_migration.py  test_bulk_job_timeout_migration.py  test_corporate_action_migration.py  test_dynamic_settings_migration.py  test_jobs_outbox_flow.py  test_market_data_job_handlers.py  test_market_data_migration.py  test_market_data_quality_transaction.py  test_monitor_scheduler.py  test_monitoring_migration.py  test_monitoring_stage3.py  test_notification_concurrency.py  test_notification_policy_migration.py  test_outbox_stream_migration.py  test_position_transaction.py  test_provider_code_migration.py  test_qfq_atomic_switch.py  test_qfq_migration.py  test_qfq_refresh_job.py  test_signal_job_handlers.py  test_signal_transaction.py  test_stage2_batch1.py  test_strategy_backtest_migration.py  test_strategy_draft_facts_migration.py  test_strategy_runner_deployment.py  test_strategy_runtime_image.py  test_strategy_stage4_registration.py  test_strategy_transaction.py  test_subscription_pause_fence.py  test_system_alert_migration.py  test_system_schedule_migration.py  test_target_transaction.py  test_targets_signals_migration.py  test_targets_signals_stage3.py  test_worker_queue_isolation.py
backend/tests/platform/: test_json_snapshot.py
(+736 files in other folders)
