[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "long-invest"
version = "0.1.0"
description = "A-share long-wave price monitoring and backtesting system"
requires-python = ">=3.12"
dependencies = [
    "asgi-correlation-id>=5,<6",
    "fastapi>=0.116,<1",
    "pydantic-settings>=2.10,<3",
    "structlog>=25,<26",
    "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=9,<10",
    "ruff>=0.14,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--strict-config", "--strict-markers"]
cache_dir = "/tmp/pytest-cache"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
